--- a/updates.html
+++ b/updates.html
@@ -5,7 +5,7 @@
   -->
 <html>
 <head>
-  <title>Phantom Inc (Posts)</title>
+  <title>Phantom Inc (Updates)</title>
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -36,7 +36,7 @@
 
 <body>
   <p>
-   <h1>All Posts</h1>
+   <h1>All Updates</h1>
   </p>
   <p>
    <h2>Update 4</h2>
