--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </p>
 <br>
     <!-- All Posts Button -->
-  <center><a href="updates.html"><button class="menu"><i class="fas fa-yin-yang fa-pulse " alt="Old Site"></i> All Updates </button></a></center>
+  <center><a href="updates.html"><button class="menu"><i class="fas fa-scroll" alt="Old Site"></i> All Updates </button></a></center>
   <br>
   <br>
 </body>
