--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,15 @@
       <a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a>
       <a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a>
       <a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a>
+      <br>
+      <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter </button></a>
 </center>
   <br>
 <center>Have discord? Get in contact NOW!</center>
   <br>
 <center><iframe src="https://discordapp.com/widget?id=299758564602413056&theme=dark"
-  width="350"
-  height="350"
+  width="325"
+  height="300"
   allowtransparency="true"
   frameborder="0">
 </iframe>
