new favicon and svg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-      <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
+      <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,6 +66,6 @@
 </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2020  <i class="fas fa-ghost"></i>  version: 1.0  </b></center>
+    <center><b> &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px"</img>   version: 1.0  </b></center>
   </footer>
 </html>
