favicon push to all pages

--- a/fearandloathing.html
+++ b/fearandloathing.html
@@ -11,7 +11,7 @@
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
   <!-- Favicon -->
-     <link rel=icon href='images/phantomicon.png' sizes="16x16" type="image/png">
+     <link rel="icon" href="images/phanicon16.png" sizes="16x16" type="image/png">
    <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <script src="scripts/fivemlaunch.js"></script>
