--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px"</img>   version: 1.0  </b></center>
+    <center><b> &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0  </b></center>
   </footer>
 </html>
