--- a/media.html
+++ b/media.html
@@ -12,8 +12,8 @@
       <!-- Fontawesome API code goes here :D -->
       <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
       <!-- Favicon -->
-        <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
-    <!-- Mobile Site Fix BB -->
+      <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
+      <!-- Mobile Site Fix BB -->
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
@@ -46,8 +46,11 @@
 </br>
 <h4>- - - Latest Upload - - -</h4>
 <iframe src="https://player.vimeo.com/video/478306238" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-</br>
-</br>
+<br>
+<br>
+<center><img src="images/phanicon-32x32.svg" /></center>
+<br>
+<br>
 </body>
 
 <footer>
