--- a/updates.html
+++ b/updates.html
@@ -12,7 +12,7 @@
     <!-- Fontawesome API code goes here :D -->
     <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-      <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
+      <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -84,8 +84,11 @@
       &gt; &gt; posted March 2019 &lt; &lt;
     </ul>
  </p>
-  <center> "Hack The Planet!" </br>|'' | </center>
 </br>
+<br>
+<center><img src="images/phanicon-32x32.svg" /></center>
+  <center> "Hack The Planet!" </br>|'' | </center>
+<br>
 <br>
 </body>
 
