--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -10,7 +10,7 @@
       <!-- Fontawesome API code goes here :D -->
       <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
       <!-- Favicon -->
-         <link rel=icon href='images/phantomicon.png' sizes="16x16" type="image/png">
+         <link rel="icon" href="images/phanicon16.png" sizes="16x16" type="image/png">
        <!-- Mobile Site Fix BB -->
           <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
        <!-- Scripts Below me BB -->
