css formatting, bug fixes, startpage hides IP now

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- PHANTOM INC 2019 __PHANT SITE
         Official Site : building upon this one, from scratch.
@@ -14,7 +15,8 @@
     <!-- Favicon -->
       <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Phantom Inc Official Website for IT Support, Photorgraphy and More!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
  <script>
@@ -37,9 +39,8 @@
   </head>
 
   <body>
-
-<br>
   <p>
+    <br>
 <center><h2> </h2> </center>
 <center>Hello and Welcome to Phantom Inc's Official Website!
 <br>  Here is the latest venture back into mostly HTML<br>Hope you enjoy!</center>
