--- a/media.html
+++ b/media.html
@@ -14,7 +14,7 @@
       <!-- Favicon -->
       <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
       <!-- Mobile Site Fix BB -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
     <script>
