new fonts, fixed layout for mobile users

--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -12,7 +12,7 @@
       <!-- Favicon -->
          <link rel="icon" href="images/phanicon16.png" sizes="16x16" type="image/png">
        <!-- Mobile Site Fix BB -->
-          <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <!-- Scripts Below me BB -->
         <script src="scripts/fivemlaunch.js"></script>
         <style>
@@ -23,7 +23,7 @@
           background-attachment: fixed;
         }
          img {
-            width: 75%;
+            width: 90%;
             height: auto;
           }
        </style>
@@ -62,6 +62,8 @@
   <p>
     <center><h4>Server Status : Currently Offline</h4></center>
   </p>
+  <br>
+  <br>
     </body>
 
   <footer>
