gta css cleanup, added new banner img for gta

--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -27,7 +27,7 @@
             height: auto;
           }
        </style>
-    <center><img src="images/FearAndLoathing-alpha.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
+    <center><img src="images/FaL-banner.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
     </head>
 
     <body>
