--- a/fearandloathing.html
+++ b/fearandloathing.html
@@ -20,13 +20,12 @@
     from {background-image: url('images/gta/01.jpg');}
     to {background-image: url("images/gta/03.jpg");}
   }
-
   img {
-    width: 75%;
-    height: auto;
-  }
+     width: 90%;
+     height: auto;
+   }
   </style>
-  <center><img src="images/FearAndLoathing-alpha.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
+  <center><img src="images/FaL-banner.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
  </head>
 
    <body>
