folder restructure, big GTA push, site improved vastly, css fixes

--- a/fearandloathing.html
+++ b/fearandloathing.html
@@ -6,59 +6,45 @@
   -->
 <html>
  <head>
-  <title>Fear And Loathing | GTA RP SERVER</title>
+  <title>Fear And Loathing | GTA RP</title>
   <link rel="stylesheet" href="css/gta.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
   <!-- Favicon -->
      <link rel="icon" href="images/phanicon16.png" sizes="16x16" type="image/png">
    <!-- Mobile Site Fix BB -->
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts/fivemlaunch.js"></script>
   <style>
   @keyframes bgrotate {
-    from {background-image: url('images/gta/01.jpg');}
-    to {background-image: url("images/gta/03.jpg");}
+    from {background-image: url('images/gta/bg-rotate/01.jpg');}
+    to {background-image: url("images/gta/bg-rotate/03.jpg");}
   }
-  img {
-     width: 90%;
-     height: auto;
-   }
   </style>
-  <center><img src="images/FaL-banner.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
+  <center><img src="images/gta/FaL-banner.png" class="logo" alt="Server Logo" /></center>
+  <div class="navigation">
+    <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/> phantom inc </button></a>
+    <a href="fearandloathingnews.html" alt="News"><button class="menu"><i class="far fa-newspaper"></i> News </button></a>
+    <a href="fearandloathinglaunch.html" alt="Server"><button class="menu"><i class="far fa-lemon"></i> SERVER</button></a>
+    <a href="https://discord.gg/DgcRdYb" alt="Discord Link"><button class="menu"><i class="fab fa-discord"></i> Discord </button></a>
+    </div>
  </head>
 
    <body>
-     <p>
-       <center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i> phantom inc </button></a></li>
-  <li><a href="https://www.phantominc.net/fearandloathinglaunch.html" alt="alt server link"><button class="menu"><i class="far fa-lemon"></i> SERVER</button></a></li>
-  <li><a href="https://discord.gg/DgcRdYb" alt="Discord Link"><button class="menu"><i class="fab fa-discord"></i> Discord </button></a></li>
-<!--
-  <div class="dropdown">
-    <button class="menu"><i class="far fa-lemon"></i> SERVER </button>
-    <div class="dropdown-content">
-    <a href='fearandloathinglaunch.html'><button class="menu"><i class="fab fa-flickr"></i> Server </button></a>
-    <a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i> Youtube </button></a>
-    <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github </button></a>
-    </div>
-  </div>-->
-   </center>
- </p>
-
- </br>
-
-  <div>
+  <p>
     <h1>
       Welcome! Currently looking rough but still functional!
     </h1>
-  </div>
+  </p>
 </br>
 <p>
   <h2>
-  Must Know what FiveM is and have it running to allow the button below work.
+  Must Know what FiveM is and have it running to allow the button below to work.
 </h2>
 </p>
+<center>
+<p><h2> We recommend starting over at the <a href="fearandloathinglaunch.html">server page <i class="fas fa-server"></i></a></h2></p>
+<center>
 <br>
 <center><div class="button">
   <button onclick="LaunchFivem()" class="menu"><i class="fas fa-running"></i> Join Now!</button>
