--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -5,7 +5,7 @@
   -->
 <html>
   	<head>
-  		<title>Fear And Loathing - GTA RP Now Launching...</title>
+		<title>SERVER STATS | Fear And Loathing | GTA RP</title>
   		<link rel="stylesheet" href="css/gta.css" />
       <!-- Fontawesome API code goes here :D -->
       <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
@@ -17,25 +17,24 @@
         <script src="scripts/fivemlaunch.js"></script>
         <style>
             html {
-          background-image: url("images/gta/07.jpg");
+          background-image: url("images/gta/bg-rotate/07.jpg");
           background-repeat: no-repeat;
           background-position: 80%;
           background-attachment: fixed;
         }
-         img {
-            width: 90%;
-            height: auto;
-          }
        </style>
-    <center><img src="images/FaL-banner.png" width="1000" height="210" class="logo" alt="Server Logo" /></center>
+    <center><img src="images/gta/FaL-banner.png" class="logo" alt="Server Logo" /></center>
+    <div class="navigation">
+      <a href="fearandloathing.html" alt="back"><button class="menu"><i class="fas fa-house-damage"></i> Home </button></a>
+      <a href="fearandloathingnews.html" alt="News"><button class="menu"><i class="far fa-newspaper"></i> News </button></a>
+      <a href="https://discord.gg/DgcRdYb" alt="Discord Link"><button class="menu"><i class="fab fa-discord"></i> Discord </button></a>
+    </div>
     </head>
 
     <body>
       <p>
-      <center>
-      <a href="https://www.phantominc.net/fearandloathing" alt="secure_yo_self"><button class="menu"><i class="fas fa-reply"></i> back </button></a>
-    </center>
-  </p>
+        <center><img src="images/gta/FearAndLoathing-banner.png" width="100%" /></center>
+      </p>
       <p>
       <h2>
       <div class="button">
