fixed background issue,  removed old files, cleaned up old index

--- a/fearandloathinglaunch.html
+++ b/fearandloathinglaunch.html
@@ -16,13 +16,11 @@
        <!-- Scripts Below me BB -->
         <script src="scripts/fivemlaunch.js"></script>
         <style>
-            html {
-          background-image: url("images/gta/bg-rotate/07.jpg");
-          background-repeat: no-repeat;
-          background-position: 80%;
-          background-attachment: fixed;
+        @keyframes bgrotate {
+          from {background-image: url('images/gta/bg-rotate/07.jpg');}
+          to {background-image: url("images/gta/bg-rotate/04.jpg");}
         }
-       </style>
+        </style>
     <center><img src="images/gta/FaL-banner.png" class="logo" alt="Server Logo" /></center>
     <div class="navigation">
       <a href="fearandloathing.html" alt="back"><button class="menu"><i class="fas fa-house-damage"></i> Home </button></a>
