--- a/oldindex.html
+++ b/oldindex.html
@@ -6,147 +6,21 @@
 -->
 <html>
 	<head>
-		<title>Phantom Inc</title>
+		<title>jeremysmai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper-->
-			<div id="wrapper">
-
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="index.html" class="icon fa-home"><span>Home</span></a>
-						<a href="#work" class="icon fa-image"><span>Photography</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#downloads" class="icon fa-download"><span>Downloads</span></a>|
-						<a href="http://phantominc.net" class="icon fa-user-secret"><span>jeremysmai</span></a>
-						<!--a href="https://twitter.com/jeremysmai" class="icon fa-twitter"><span>Twitter</span></a-->
-						<a href="https://github.com/jeremysmai" class="icon fa-github"><span>Github</span></a>
-						<!--a href="https://instagram.com/phant0m1nc" class="icon fa-instagram"><span>Instagram</span></a-->
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Me -->
-							<article id="home" class="panel intro">
-								<header>
-									<h1>Phantom Inc</h1>
-									<p>Hidden In The Shadows</p>
-									<h4>The Official Site(In progress), navigate using the icons above.</h4>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon fa-chevron-right"></span>
-									<img src="images/logo.jpg" height="300" width="300"alt="PhantomInc" />
-								</a>
-							</article>
-
-						<!-- Work -->
-							<article id="work" class="panel">
-								<header>
-									<h2>Photography</h2>
-								</header>
-								<p>
-									Here is some of my best work, stay up to date by following my Instagram.
-								</p>
-								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="images/" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<div class="github-widget" data-username="jeremysmai"></div>
-									<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
-								<!--form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form-->
-								<center>
-									<a href="mailto:contact@phantominc.net" class="icon fa-envelope"><span>Email</span></a>
-									<a href="tel:4144658826" class="icon fa-phone"><span>Call</span></a>
-									<a href="sms:4144658826" class="icon fa-mobile"><span>Text</span></a>
-								</center>
-							</article>
-
+	<body>
+							<h1>Contact Me</h1><br>
+							<h3>jeremysmai</h3>
+					<div class="github-widget" data-username="jeremysmai"></div>
+					<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 					</div>
-
-				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; |''| Phantom Inc. 2018</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+					<br><br>
+					<p><img src="images/phanicon-32x32.svg" /></p>
+					<br><br>
 	</body>
+	<footer>Phantom Inc. 2020</footer>
 </html>
