fixed stupid toggle bug! finally!

--- a/startpage.html
+++ b/startpage.html
@@ -79,21 +79,21 @@
  <script>
  function ipaddress() {
    var x = document.getElementById("ipaddress");
-   if (x.style.display === "none") {
-     x.style.display = "block";
+   if (x.style.display == "block") {
+     x.style.display = "none";
    }
    else {
-     x.style.display = "none";
+     x.style.display = "block";
    }
  }
 </script>
  <script>
  function speedtest() {
    var x = document.getElementById("speedtest");
-   if (x.style.display === "none") {
-     x.style.display = "block";
-   } else {
+   if (x.style.display == "block") {
      x.style.display = "none";
+   } else {
+     x.style.display = "block";
    }
  }
 </script>
