--- a/media.html
+++ b/media.html
@@ -24,6 +24,9 @@
 
       gtag('config', 'UA-122993902-1');
     </script>
+    <style>.embed-container { position: relative; }
+           .embed-container iframe { top: 0; left: 0; width: 100%; height: 100%; }
+    </style>
     <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
   <div class="navigation">
     <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
@@ -45,7 +48,7 @@
 </br>
 </br>
 <h4>- - - Latest Upload - - -</h4>
-<iframe src="https://player.vimeo.com/video/478306238" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<div class='embed-container'><iframe src="https://player.vimeo.com/video/478306238" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
 <br>
 <br>
 <center><img src="images/phanicon-32x32.svg" /></center>
