fixed all home icons to wb svg, added index info, prepping for updates

--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
  </script>
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
 <div class="navigation">
- <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
+ <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
  <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Start</button></a>
  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
  </div>
