--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Start Visual-->
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
-      <!-- li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li -->
+        <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
       <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
@@ -48,8 +48,17 @@
 <br>
   <p><center><h2> - - - </h2></center></p>
 <br>
+<p>
+  Phantom Inc. an idea from long ago. <br>
+  This site was created to keep track of all my random projects <br>
+  like this site using HTML, to newly developed games using Python. <br>
+  Stayed Tuned.
+  </p>
+  <br>
+    <p><center><h2> - - - </h2></center></p>
+  <br>
     <!-- Start of Post Section -->
-    <p>
+
      <h2>Update 4</h2>
     <ul>
       <li> Updated Downloads page, added new look and items</li>
@@ -58,7 +67,7 @@
       <li> Overall site cleanup and upgrades </li>
       &gt; &gt; posted November 2020 &lt; &lt;
     </ul>
-  </p>
+
 <br>
     <!-- All Posts Button -->
   <center><a href="updates.html"><button class="menu"><i class="fas fa-scroll" alt="Old Site"></i> All Updates </button></a></center>
