--- a/startpage.html
+++ b/startpage.html
@@ -37,7 +37,7 @@
   <center><img src="images/phantom-low.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
   <p>
     <center>
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a>
+  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
   <a href="https://www.youtube.com/"><button class="menu"><i class="fab fa-youtube"></i></button></a>
   <a href="https://www.reddit.com"><button class="menu"><i class="fab fa-reddit"></i></button></a>
   <a href="https://www.amazon.com"><button class="menu"><i class="fab fa-amazon"></i></button></a>
@@ -100,6 +100,6 @@
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
+    <center><b> &copy; Phantom Inc. 2020 <img src="images/phanicon-bw.svg"/> version: 1.0 </b></center>
   </footer>
 </html>
