bubbles pushed for more info on IT support page

--- a/support.html
+++ b/support.html
@@ -46,19 +46,33 @@
 <!-- Start Listing them supporting links -->
   <p>
       <h2><u>Useful Websites</u></h2>
-    <a href="https://prism-break.org/en/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...] </button></a>
-    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All] </button></a>
-    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site] </button></a>
-    <a href="http://www.icanhazip.com" target="_blank"><button class="menu"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address </button></a>
+    <a href="https://prism-break.org/en/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...]
+      <span class="bubbletext">Use recommended safe software from the PRISM program, read up on it. Basically what Snowden leaked</span>
+      </button></a>
+    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All]
+      <span class="bubbletext">Know what ports are open on your computer, or network for that much? Use this site to check them all.</span>
+     </button></a>
+    <a href="https://nvd.nist.gov/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site]
+      <span class="bubbletext">This is a Database of Known vulnerabilites recognized by the governement.</span>
+    </button></a>
+    <a href="http://www.icanhazip.com" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address
+      <span class="bubbletext">This site will literally show your current IP address, DO NOT click on this if you are streaming.</span>
+    </button></a>
  </p>
   <p>
     <h2><u>Reverse Engineering</u></h2>
-      <a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra [NSA Tool] </button></a>
+      <a href="https://ghidra-sre.org/" target="_blank"><button class="bubble"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra [NSA Tool]
+        <span class="bubbletext">This is heavier duty on the side of Reverse Engineering software, use with caution, release by US gov.</span>
+      </button></a>
   </p>
   <p>
       <h2><u>Linux Secuirty Suites</u></h2>
-    <a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a>
-    <a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a>
+    <a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="bubble"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security
+      <span class="bubbletext">The artistic response to Kali linux, beautiful and security motiviated.</span>
+    </button></a>
+    <a href="https://www.kali.org/downloads/" target="_blank"><button class="bubble"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux
+      <span class="bubbletext">The origianl full secuirty Suite, jam packed with tools to tinker with all sorts of different applications.</span>
+    </button></a>
   </p>
 <br>
 <br>
