--- a/christmas.html
+++ b/christmas.html
@@ -11,7 +11,25 @@
       <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <style>
+      html {
+        /* background: url("images/background.jpg"); */
+        background: linear-gradient(darkgreen, green, darkgreen);
+        background-position: center;
+        background-attachment: fixed;
+      }
+      a:link {
+        color: crimson;
+      }
 
+      a:visited {
+        color: cyan;
+      }
+
+      a:hover {
+        color: orange;
+      }
+      </style>
 <!-- Start Visual-->
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
@@ -34,8 +52,8 @@
             <th> Links </th>
           </tr>
           <tr>
-            <td> iPhone 12 | Green | 128GB or 256GB </td>
-            <td> $850 - $950 </td>
+            <td> iPhone 12 | Green | 128GB </td>
+            <td> $850 </td>
             <td><a href="https://www.apple.com/shop/buy-iphone/iphone-12/6.1-inch-display-128gb-green-att"><i class="fab fa-apple"></i> Apple</a> | <a href="https://www.bestbuy.com/site/apple-iphone-12-5g-128gb-green-at-t/6009689.p?skuId=6009689"> BestBuy</a></td>
           </tr>
           <tr>
@@ -46,7 +64,7 @@
           <tr>
             <td> 20W USB C Power Adapter </td>
             <td> $20 </td>
-            <td><a href="https://www.apple.com/shop/product/MHJA3AM/A/20w-usb-c-power-adapter"><i class="fab fa-apple"></i> Apple</a></td>
+            <td><a href="https://www.apple.com/shop/product/MHJA3AM/A/20w-usb-c-power-adapter"><i class="fab fa-apple"></i> Apple</a> | <a href="https://www.amazon.com/Apple-20W-USB-C-Power-Adapter/dp/B08L5M9BTJ"><i class="fab fa-amazon"></i> Amazon</a></td>
           </tr>
           <tr>
             <td>[Apple] Usb C to Lightning Cable (6ft.) </td>
@@ -56,7 +74,7 @@
           <tr>
             <td>[Anker] Usb C to Lightning Cable (6ft.) </td>
             <td> $22 </td>
-            <td><a href="https://www.amazon.com/dp/B085NQBRB2/?coliid=I3NI4XNPL7PIUW&colid=1IJOW7VZT5MLP&psc=1&ref_=lv_ov_lig_dp_it"> Amazon</a></td>
+            <td><a href="https://www.amazon.com/dp/B085NQBRB2/?coliid=I3NI4XNPL7PIUW&colid=1IJOW7VZT5MLP&psc=1&ref_=lv_ov_lig_dp_it"><i class="fab fa-amazon"></i> Amazon</a></td>
           </tr>
           <tr>
             <td> Fire Emblem Three Houses Expansion Pass DLC </td>
@@ -65,7 +83,7 @@
           </tr>
         </table>
         <br>
-        <h4>Updated 11-29-2020 5:15pm</h4>
+        <h4>Updated 11-30-2020 4:45pm</h4>
       </center>
 
   <br>
