--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p>
   Phantom Inc. an idea from long ago. <br>
   This site was created to keep track of all my random projects <br>
-  like this site using HTML, to newly developed games using Python. <br>
+  Visit the Downloads page to see what I'm currently working on. <br>
   Stayed Tuned.
   </p>
   <br>
