--- a/christmas.html
+++ b/christmas.html
@@ -29,6 +29,21 @@
       a:hover {
         color: orange;
       }
+      table {
+        font-family: 'Roboto', sans-serif;
+        border-collapse: collapse;
+        width: 80%;
+      }
+
+      td, th {
+        border: 1px solid #ffffff;
+        text-align: left;
+        padding: 8px;
+      }
+
+      tr:nth-child(even) {
+        background-color: #4d4d4d;
+      }
       </style>
 <!-- Start Visual-->
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
@@ -81,9 +96,14 @@
             <td>  $25  </td>
             <td><a href="https://www.target.com/p/fire-emblem-three-houses-expansion-pass-nintendo-switch-digital/-/A-77589821"> Target</a> | <a href="https://www.bestbuy.com/site/fire-emblem-three-houses-expansion-pass-nintendo-switch-digital/6361721.p?skuId=6361721"> BestBuy </a></td>
           </tr>
+          <tr>
+            <td>Nintendo Switch Pro Controller</td>
+            <td> $60-70 </td>
+            <td><a href="https://www.amazon.com/Nintendo-Switch-Pro-Controller/dp/B01NAWKYZ0/"><i class="fab fa-amazon"></i> Amazon</a> | <a href="https://www.target.com/p/nintendo-switch-pro-controller/-/A-52180631"> Target</a> | <a href="https://www.bestbuy.com/site/pro-wireless-controller-for-nintendo-switch/5748618.p?skuId=5748618"> BestBuy</a></td>
+          </tr>
         </table>
         <br>
-        <h4>Updated 11-30-2020 4:45pm</h4>
+        <h4>Updated 12-6-2020 10:25am</h4>
       </center>
 
   <br>
