updated wishlist again

--- a/christmas.html
+++ b/christmas.html
@@ -97,13 +97,18 @@
             <td><a href="https://www.target.com/p/fire-emblem-three-houses-expansion-pass-nintendo-switch-digital/-/A-77589821"> Target</a> | <a href="https://www.bestbuy.com/site/fire-emblem-three-houses-expansion-pass-nintendo-switch-digital/6361721.p?skuId=6361721"> BestBuy </a></td>
           </tr>
           <tr>
-            <td>Nintendo Switch Pro Controller</td>
+            <td> Nintendo Switch Pro Controller</td>
             <td> $60-70 </td>
             <td><a href="https://www.amazon.com/Nintendo-Switch-Pro-Controller/dp/B01NAWKYZ0/"><i class="fab fa-amazon"></i> Amazon</a> | <a href="https://www.target.com/p/nintendo-switch-pro-controller/-/A-52180631"> Target</a> | <a href="https://www.bestbuy.com/site/pro-wireless-controller-for-nintendo-switch/5748618.p?skuId=5748618"> BestBuy</a></td>
           </tr>
+          <tr>
+            <td> Westworld Season 3 (4K UHD)</td>
+            <td> $45 </td>
+            <td><a href="https://www.bestbuy.com/site/westworld-the-complete-third-season-includes-digital-copy-4k-ultra-hd-blu-ray-blu-ray/6410977.p?skuId=6410977"> BestBuy</a></td>
+          </tr>
         </table>
         <br>
-        <h4>Updated 12-6-2020 10:25am</h4>
+        <h4>Updated 12-6-2020 6:00 pm</h4>
       </center>
 
   <br>
