added 3d printer to list

--- a/christmas.html
+++ b/christmas.html
@@ -72,6 +72,11 @@
             <td><a href="https://www.apple.com/shop/buy-iphone/iphone-12/6.1-inch-display-128gb-green-att"><i class="fab fa-apple"></i> Apple</a> | <a href="https://www.bestbuy.com/site/apple-iphone-12-5g-128gb-green-at-t/6009689.p?skuId=6009689"> BestBuy</a></td>
           </tr>
           <tr>
+            <td> Original Prusa Mini+ Kit (addons+PLA) </td>
+            <td> $425 </td>
+            <td><a href="https://shop.prusa3d.com/en/3d-printers/1387-original-prusa-mini-kit.html#"> Prusa Research</a></td>
+          </tr>
+          <tr>
             <td> MagSafe Charger (Only If new iPhone)</td>
             <td> $40 </td>
             <td><a href="https://www.apple.com/shop/product/MHXH3AM/A/magsafe-charger"><i class="fab fa-apple"></i> Apple</a></td>
