fixed css for footer on every page, hello phantom svg

--- a/support.html
+++ b/support.html
@@ -79,6 +79,6 @@
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
+    &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0
   </footer>
 </html>
