--- a/network.html
+++ b/network.html
@@ -36,7 +36,7 @@ In a future release this will be replaced with Network stats such as IP, ping te
 </body>
 
  <footer>
-    <center><b> &copy; Phantom Inc. 2020 <i class="fas fa-user-astronaut"></i> version: 1.0 </b></center>
+   &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0
 </footer>
 
 </html>
