fixed footer formatting

--- a/media.html
+++ b/media.html
@@ -56,7 +56,5 @@
 <br>
 </body>
 
-<footer>
-  &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0
-</footer>
+<footer> &copy; Phantom Inc. 2020  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0 </footer>
 </html>
