--- a/startpage.html
+++ b/startpage.html
@@ -99,7 +99,5 @@
 </script>
   </body>
 
-  <footer>
-    <center><b> &copy; Phantom Inc. 2020 <img src="images/phanicon-bw.svg"/> version: 1.0 </b></center>
-  </footer>
+  <footer> &copy; Phantom Inc. 2020 <img src="images/phanicon-bw.svg"/> version: 1.0 </footer>
 </html>
