--- a/christmas.html
+++ b/christmas.html
@@ -57,7 +57,7 @@
 
   <body>
     <p><h1> Jeremy's Wishlist </h1></p>
-    <p><center><h2> - - - </h2></center></p>
+    <p><center><h2> - <i class="fas fa-hat-wizard"></i> - </h2></center></p>
     <!-- Start of Post Section -->
       <center>
         <table>
@@ -112,15 +112,17 @@
             <td><a href="https://www.bestbuy.com/site/westworld-the-complete-third-season-includes-digital-copy-4k-ultra-hd-blu-ray-blu-ray/6410977.p?skuId=6410977"> BestBuy</a></td>
           </tr>
           <tr>
-            <td>Forza Horizon 4 Digital (Stan or Ult)</td>
+            <td>Forza Horizon 4 Digital (Standard or Ultimate)</td>
             <td> $60-$100 </td>
             <td><a href="https://www.microsoft.com/en-us/p/forza-horizon-4/9pnqkhfld2wq?activetab=pivot:overviewtab"><i class="fab fa-microsoft"></i> Xbox (Microsoft)</a></td>
           </tr>
         </table>
         <br>
-        <h4>Updated 12-16-2020 9:20 pm</h4>
+        <h4>Updated 12-20-2020 1:20 pm</h4>
       </center>
-
+      <br>
+      <br>
+      <center><i class="fab fa-buy-n-large"></i></center>
   <br>
   <br>
 </body>
