--- a/christmas.html
+++ b/christmas.html
@@ -56,8 +56,8 @@
   </head>
 
   <body>
-    <p><h1> Jeremy's Wishlist </h1></p>
-    <p><center><h2> - <i class="fas fa-hat-wizard"></i> - </h2></center></p>
+    <p><h1> Jeremy's Wishlist <i class="fas fa-hat-wizard"></i></h1></p>
+    <p><center><h2> - - - </h2></center></p>
     <!-- Start of Post Section -->
       <center>
         <table>
@@ -122,7 +122,7 @@
       </center>
       <br>
       <br>
-      <center><i class="fab fa-buy-n-large"></i></center>
+      <center><h1><i class="fab fa-buy-n-large"></i></h1></center>
   <br>
   <br>
 </body>
