--- a/wishlist.html
+++ b/wishlist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- PHANTOM INC 2020__Xmas List-->
+<!-- PHANTOM INC 2020__Xmas and beyond List-->
 <html>
 <head>
-  <title>Phantom Inc Wish List </title>
+  <title>Jeremy's Wish List </title>
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
@@ -65,11 +65,6 @@
             <th>Name</th>
             <th> Price </th>
             <th> Links </th>
-          </tr>
-          <tr>
-            <td> Original Prusa Mini+ Kit (addons+PLA) </td>
-            <td> $425 </td>
-            <td><a href="https://shop.prusa3d.com/en/3d-printers/1387-original-prusa-mini-kit.html#"> Prusa Research</a></td>
           </tr>
           <tr>
             <td>[Anker] Usb C to Lightning Cable (6ft.) </td>
