added icons to downloads page

--- a/downloads.html
+++ b/downloads.html
@@ -48,7 +48,7 @@
  </p>
 <!-- Games Table Section  -->
   <br>
-<h2>Games</h2>
+<h2>Games <i class="fas fa-gamepad"></i></h2>
 <center>
   <table>
     <tr>
@@ -70,7 +70,7 @@
 </center>
 <!-- #D Print Files Section -->
 <br>
-<h2> 3D Print Files </h2>
+<h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
 <center>
 <table>
   <tr>
@@ -88,7 +88,7 @@
 
 <!-- Utilities Table Section -->
   <br>
-  <h2>Utilities</h2>
+  <h2>Utilities <i class="fas fa-box-open"></i></h2>
   <center><table>
   <tr>
     <th> File </th>
