--- a/downloads.html
+++ b/downloads.html
@@ -74,14 +74,16 @@
 <center>
 <table>
   <tr>
-    <th> File </th>
-    <th> Description </th>
+    <th> Filename </th>
     <th> Version </th>
+    <th> Description </th>
+    <th> Preview </th>
   </tr>
   <tr>
     <td> File - Link Included </td>
-    <td>  Description of said file</td>
     <td> 0.0 </td>
+    <td> Description of said file </td>
+    <td> <img src="images/3d/example.png" /></td>
   </tr>
  </table>
 </center>
