--- a/network.html
+++ b/network.html
@@ -25,13 +25,14 @@
  </script>
  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
 <div class="navigation">
- <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a>
+ <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
 </div>
 </head>
 
   <body>
     <p>
-In a future release this will be replaced with Network stats such as IP, ping test packet ratios, stayalive options, port sniffing tests and more! stay tuned. also you shouldn't be here yet, shame on you :P
+In a future release this will be replaced with Network stats such as IP, ping test packet ratios, stayalive options, port sniffing tests and more! stay tuned. <br> also you shouldn't be here yet, shame on you :P
+<br> For now you could checkout the <a href="https://www.phantominc.net/startpage">startpage...<a/>
     </p>
 </body>
 
