Updated some styling and added quote to startpage

--- a/startpage.html
+++ b/startpage.html
@@ -73,6 +73,9 @@
  </center>
  <br>
  <br>
+ <center><h4>"Control is an illusion..."</h4></center>
+ <br>
+ <br>
  <center><img src="images/phanicon-32x32.svg" /></center>
  <br>
  <br>
