--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   <body>
   <p>
     <br>
-<center><h2> </h2> </center>
-<center>Hello and Welcome to Phantom Inc's Official Website!
+<center>  </center>
+<center><h2>Hello and Welcome to Phantom Inc's Official Website!
 <br>  Here is the latest venture back into mostly HTML<br>Hope you enjoy!</center>
-  </p>
+  </h2></p>
 <br>
   <p><center><h2> - - - </h2></center></p>
 <br>
