added wallpaper section

--- a/media.html
+++ b/media.html
@@ -47,8 +47,13 @@
 <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a>
 </br>
 </br>
-<h4>- - - Latest Upload - - -</h4>
+<h4>- - - Latest Video - - -</h4>
 <div class='embed-container'><iframe src="https://player.vimeo.com/video/478306238" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+<br>
+<br>
+<h2>- - Wallpapers - -</h2>
+<a href="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+  <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250" alt="4K-Skyline"></a>
 <br>
 <br>
 <center><img src="images/phanicon-32x32.svg" /></center>
