fixed css for ip reveal

--- a/startpage.html
+++ b/startpage.html
@@ -28,7 +28,8 @@
      display: none;
      color: tomato;
      font-weight: bold;
-     width: 30%;
+     font-size: 18px;
+     width: 45%;
    }
    </style>
 </head>
